Fix build for JDK 17